--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -85,4 +85,15 @@
         app:layout_constraintTop_toTopOf="@+id/textView5"
         android:layout_marginTop="0dp" />
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="addr"
+        android:text="住址"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintLeft_toRightOf="@+id/button3" />
+
 </android.support.constraint.ConstraintLayout>
